--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300&family=Lato:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GEMS WHALE MOON</title>
-    <link rel="icon" type="image/x-icon" href="/rm_favicon.jpeg">
+    <title>GWM</title>
+    <link rel="icon" type="image/x-icon" href="/Art/Olivine Large.png">
     <link rel="stylesheet" href="style.css" />
     <script src="javascript.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,7 +24,7 @@
   <body>
     <div id="mainDiv">
       <div class="titleDiv">
-        <h1>GEMS WHALE MOON</h1>
+        <h1 id="titleLine">Gemstones, Whale, Moon</h1>
       </div>
       <div class="divSpacer"></div>
       <div class="divRow">
@@ -36,7 +37,7 @@
       </div>
       <div class="divSpacer"></div>
     </div>  
-   <h5 id="bottomBanner">© RAM 2022</h5>
+   <h5 id="bottomBanner">© Ram 2022</h5>
 
   
   </body>
