--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
         <img class="whale" src="/Art/whaleSwim.gif" alt="">
       </div>
       <div id="weaponsDiv">
-        <img src="/Art/Pyroxine.png" alt="" class="gemstone">
-        <img src="/Art/Garnet.png" alt="" class="gemstone">
-        <img src="/Art/Olivine Large.png" alt="" class="gemstone">
+        <div class="gemstoneBulge">
+          <img src="/Art/Pyroxine.png" alt="" class="gemstone">
+        </div>
+        <div class="gemstoneBulge">
+          <img src="/Art/Garnet.png" alt="" class="gemstone">
+        </div>
+        <div class="gemstoneBulge">
+          <img src="/Art/Olivine Large.png" alt="" class="gemstone">
+        </div>
       </div>
       <div class="divSpacer"></div>
     </div>  
