--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
       </div>
       <div class="divSpacer"></div>
       <div class="divRow">
-        <img class="whale" src="/Art/whaleSwim.gif" alt="">
+        <img class="whale" src="/Art/whale.gif" alt="">
       </div>
       <div id="weaponsDiv">
         <div class="gemstoneBulge">
-          <img src="/Art/Pyroxine.png" alt="" class="gemstone">
+          <img src="/Art/pyroxine.png" alt="" class="gemstone">
         </div>
         <div class="gemstoneBulge">
-          <img src="/Art/Garnet.png" alt="" class="gemstone">
+          <img src="/Art/garnet.png" alt="" class="gemstone">
         </div>
         <div class="gemstoneBulge">
-          <img src="/Art/Olivine Large.png" alt="" class="gemstone">
+          <img src="/Art/olivine.png" alt="" class="gemstone">
         </div>
       </div>
       <div class="divSpacer"></div>
