--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <div id="weaponsDiv">
         <div class="gemstoneBulge">
           <img src="./Art/pyroxine.png" alt="" class="gemstone">
+          <img src="./pyroxine.png" alt="" class="gemstone">
+          <img src="/pyroxine.png" alt="" class="gemstone">
         </div>
         <div class="gemstoneBulge">
           <img src="./Art/garnet.png" alt="" class="gemstone">
