fixing gem names

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       </div>
       <div id="weaponsDiv">
         <div class="gemstoneBulge">
-          <img src="./Art/pyroxine.png" alt="" class="gemstone">
+          <img src="./Art/pyroxine_gem.png" alt="" class="gemstone">
         </div>
         <div class="gemstoneBulge">
-          <img src="./Art/garnet.png" alt="" class="gemstone">
+          <img src="./Art/garnet_gem.png" alt="" class="gemstone">
         </div>
         <div class="gemstoneBulge">
-          <img src="./Art/olivine.png" alt="" class="gemstone">
+          <img src="./Art/olivine_gem.png" alt="" class="gemstone">
         </div>
       </div>
       <div class="divSpacer"></div>
