--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GWM</title>
-    <link rel="icon" type="image/x-icon" href="/Art/olivine_gem.png">
+    <link rel="icon" type="image/x-icon" href="/Art/olivine_gem.png?">
     <link rel="stylesheet" href="style.css" />
    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
